--- a/shell/apple/emulator-osx/reicast-osx.xcodeproj/xcshareddata/xcschemes/reicast-osx.xcscheme
+++ b/shell/apple/emulator-osx/reicast-osx.xcodeproj/xcshareddata/xcschemes/reicast-osx.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "if [[ `uname -m` == &apos;arm64&apos; ]]; then&#10;  sed -i &apos;&apos; &apos;s/LIBSDL.*/LIBSDL = \/opt\/homebrew\/lib\/libSDL2.a/&apos;  $SRCROOT/emulator-osx/DreamcastConfig.xcconfig&#10;fi&#10;">
+               scriptText = "if [[ `uname -m` == &apos;arm64&apos; ]]; then&#10;    sdl2path=&apos;/opt/homebrew/lib/libSDL2.a&apos;&#10;else&#10;    sdl2path=&apos;/usr/local/lib/libSDL2.a&apos;&#10;fi&#10;sed -i &apos;&apos; &quot;s|LIBSDL.*|LIBSDL = $sdl2path|&quot; $SRCROOT/emulator-osx/DreamcastConfig.xcconfig&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
