switch: build with miniupnp. set correct window size
organize header
remove unneeded switch-specific code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -338,14 +338,18 @@ target_sources(${PROJECT_NAME} PRIVATE
 
 target_include_directories(${PROJECT_NAME} PRIVATE core/deps/nowide/include)
 
-if(NOT MINIUPNP_FOUND AND NOT NINTENDO_SWITCH)
-	option(UPNPC_BUILD_SHARED "Build shared library" OFF)
-	option(UPNPC_BUILD_TESTS "Build test executables" OFF)
-	option(UPNPC_BUILD_SAMPLE "Build sample executables" OFF)
-	option(UPNPC_NO_INSTALL "Disable installation" ON)
-	add_subdirectory(core/deps/miniupnpc)
-	target_include_directories(${PROJECT_NAME} PRIVATE core/deps/miniupnpc)
-	target_link_libraries(${PROJECT_NAME} PRIVATE miniupnpc::miniupnpc)
+if(NOT MINIUPNP_FOUND)
+	if(NINTENDO_SWITCH)
+		target_compile_definitions(${PROJECT_NAME} PRIVATE FEAT_NO_MINIUPNPC)
+	else()
+		option(UPNPC_BUILD_SHARED "Build shared library" OFF)
+		option(UPNPC_BUILD_TESTS "Build test executables" OFF)
+		option(UPNPC_BUILD_SAMPLE "Build sample executables" OFF)
+		option(UPNPC_NO_INSTALL "Disable installation" ON)
+		add_subdirectory(core/deps/miniupnpc)
+		target_include_directories(${PROJECT_NAME} PRIVATE core/deps/miniupnpc)
+		target_link_libraries(${PROJECT_NAME} PRIVATE miniupnpc::miniupnpc)
+	endif()
 endif()
 
 if(NOT LIBZIP_FOUND OR NINTENDO_SWITCH)
